wdd131 home page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WWDD 131 - Dynamic Web Fundamentals - Cody Dzierzon</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals - Cody Dzierzon Profile Summary">
+    <meta name="author" content="Cody Dzierzon">
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Montserrat:ital@0;1&family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>WDD131 - Cody Dzierzon</h1>
+    <header>
+        <h1>WWDD 131 - Dynamic Web Fundamentals - Cody Dzierzon</h1>
+        <nav>
+            <a href="https://www.linkedin.com/in/cody-dzierzon/">LinkedIn</a> |
+            <a href="https://byui.instructure.com/">I-Learn</a> |
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/hel/5?lang=eng&id=p12#p12">Scripture</a> |
+            <a href="#">Final Project</a>
+        </nav>
+    </header>
+    <main>
+        <div class="section">
+            <section class="card">
+                <h2>About Me</h2>
+                <div class="profile">
+                    <p>I'm Cody Dzierzon, a passionate web development student currently learning the fundamentals of dynamic web design. I enjoy coding, problem-solving, and learning new technologies.</p>
+                    <img src="images/profile.jpg" alt="profile-picture">
+                </div>
+            </section>
+            <section class="card">
+                <h2>Web Dev Resources</h2>
+                <p>Here are some useful resources for web development:</p>
+                <ul>
+                    <li><a href="https://developer.mozilla.org/en-US/">MDN Web Docs</a></li>
+                    <li><a href="https://www.w3schools.com/">W3Schools</a></li>
+                    <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                </ul>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <p>© <span id="currentyear"></span> Cody Dzierzon - United States</p>
+        <p>Last modified: <span id="lastmodified"></span></p>
+    </footer>
 </body>
 </html>
