--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
                     <p>I'm Cody Dzierzon, a passionate web development student currently learning the fundamentals of dynamic web design. I enjoy coding, problem-solving, and learning new technologies.</p>
                     <img src="images/profile.jpg" alt="profile-picture">
                 </div>
-
                 <div class="profile">
                     <img src="images/usa.jpg" alt="usa-picture">
                     <p>The United States, a vast and diverse nation in North America, spans 50 states with landscapes ranging from mountains to coastlines. Known for its economic influence, cultural diversity, and innovation, the U.S. holds a prominent role globally. It values freedom, democracy, and the unique contributions of its varied population.</p>
-                <div class="profile">
-                
+                </div>div class="profile">
             </section>
             <section class="card secondcard">
                 <h2>Web Dev Resources</h2>
