--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="profile">
                     <img src="images/usa.jpg" alt="usa-picture">
                     <p>The United States, a vast and diverse nation in North America, spans 50 states with landscapes ranging from mountains to coastlines. Known for its economic influence, cultural diversity, and innovation, the U.S. holds a prominent role globally. It values freedom, democracy, and the unique contributions of its varied population.</p>
-                </div class="profile">
+                </div>
             </section>
             <section class="card secondcard">
                 <h2>Web Dev Resources</h2>
