--- a/temples.html
+++ b/temples.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <div class="topnav">
+        <nav class="topnav">
             <h1>Temples</h1>
             <div id="myLinks">
                 <a href="#home" class="active">Home</a>
@@ -31,46 +31,49 @@
             <a href="javascript:void(0);" class="close-icon" onclick="toggleMenu()"> 
                 <i class="fa fa-times"></i>
             </a>
-        </div>
+        </nav>
     </header>
-    <div class="image-grid">
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/dallasTemple.jpg" alt="Dallas Temple">
-            <figcaption>Dallas Temple</figcaption>
-        </figure>
-    </div>
+    <main>
+        <h2 class="page-title">Home</h2>
+        <div class="image-grid">
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/dallasTemple.jpg" alt="Dallas Temple">
+                <figcaption>Dallas Temple</figcaption>
+            </figure>
+        </div>
+    </main>
     <footer>
         <p>© <span id="currentyear"></span> Cody Dzierzon - United States</p>
         <p>Last modified: <span id="lastmodified"></span></p>
