Added javascript for wind chill

--- a/place.html
+++ b/place.html
@@ -47,7 +47,7 @@
                     <h3>Temperature:</h3><p>18°C (64°F)</p>
                     <h3>Conditions:</h3><p>Partly Cloudy</p>
                     <h3>Wind:</h3><p>10 km/h</p>
-                    <h3>Wind Chill:</h3><p>16°C (61°F)</p>
+                    <h3>Wind Chill:</h3><p id="wind-chill">16°C (61°F)</p>
                 </div>
             </div>
         </section>
