fixed contrast errors

--- a/place.html
+++ b/place.html
@@ -23,7 +23,7 @@
 
         <picture class = hero-img>
             <source srcset="images/SA-ostrich.webp" media="(min-width: 768px)">
-            <img src="images/SA-giraffe.webp" alt="Hero image">
+            <img src="images/elephant.webp" alt="Hero image">
         </picture>
 
         <section>
