added javascript to dynamically add temples

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <h2 class="page-title">Home</h2>
-        <div class="image-grid">
+        <div id="temple-container">
         </div>
     </main>
     <footer>
