Added header to form

--- a/form.html
+++ b/form.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Montserrat:ital@0;1&family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h1>Product Review</h1>
+    </header>
     <main>
         <form method="get" action="review.html">
             <label for="product">Product Name</label>
