--- a/final-project/habitats.html
+++ b/final-project/habitats.html
@@ -16,7 +16,9 @@
 <body>
     <header>
         <nav>
-            
+            <a href="index.html">Home</a>
+            <a href="habitats.html">Habitats</a>
+            <a href="travel.html">Travel</a>
         </nav>
 
     </header>
