added main pages

--- a/final-project/travel.html
+++ b/final-project/travel.html
@@ -16,15 +16,40 @@
 <body>
     <header>
         <nav>
-            
+            <a href="index.html">Home</a>
+            <a href="habitats.html">Habitats</a>
+            <a href="travel.html">Travel</a>
         </nav>
 
     </header>
     <main>
+        <h1 class="title">Travel</h1>
+        <img id="hero" src="images/johannesburg.jpg" alt="johannesburg city">
 
+        <div class="travel-content">
+            <h2>Travel Tips</h2>
+            <p>Fly into major hubs like Nairobi or Johannesburg and connect to regional airports near safari destinations. Many safaris include guided transportation.</p>
+            <img src="images/africa.jpg" alt="african map">
+        </div>
+
+        <h2>Accommodation Options</h2>
+        <div class="content travel">
+            <div class="section">
+                <img src="images/luxury.jpeg"  alt="luxury lodge">
+                <h3>Luxury Lodges: Experience comfort and elegance with stunning views.</h3>
+            </div>
+            <div class="section">
+                <img src="images/camp2.jpeg" alt="camp">
+                <h3>Safari Camps: Get closer to nature in eco-friendly camps.</h3>
+            </div>
+            <div class="section">
+                <img src="images/budget.jpg" alt="budget Accommodation">
+                <h3>Budget-Friendly: Enjoy affordable options without compromising on adventure.</h3>
+            </div>
+        </div>
     </main>
     <footer>
-
+        <p>&copy; 2024 Exploring the African Safari. All rights reserved. - Cody Dzierzon</p>
     </footer>
 </body>
 </html>
