--- a/final-project/index.html
+++ b/final-project/index.html
@@ -16,15 +16,38 @@
 <body>
     <header>
         <nav>
-            
-        </nav>
-
+            <a href="index.html">Home</a>
+            <a href="habitats.html">Habitats</a>
+            <a href="travel.html">Travel</a>
+        </nav>    
     </header>
     <main>
+        <h1 class="title">Exploring the African Safari</h1>
+        <img id="hero" src="images/hero2.webp" alt="african plains">
+        <div class="content">
+            <div class="section">
+                <img src="images/giraffe.jpg" alt="giraffe">
+                <h2>Discover the African Safari</h2>
+                <p>Experience the breathtaking landscapes and diverse wildlife of Africa. From the majestic lions to the graceful giraffes, every moment is a chance to connect with nature.</p>
+            </div>
+            <div class="section">
+                <img src="images/safari-car.jpg" alt="safari guide">
+                <h2>Why Choose an African Safari?</h2>
+                <p>An African safari offers an unparalleled adventure, immersing you in unique ecosystems. Witness the Great Migration, explore the Serengeti, and create memories that last a lifetime.</p>
+            </div>
+        </div>
+    
+        <form>
+            <h2>Sign Up for Our Newsletter</h2>
+            <p>Stay updated on the latest safari news, travel tips, and exclusive deals.</p>
+            <input type="email" placeholder="Enter your email" required>
+            <button type="submit">Subscribe</button>
+        </form>
+
 
     </main>
     <footer>
-
+        <p>&copy; 2024 Exploring the African Safari. All rights reserved. - Cody Dzierzon</p>
     </footer>
 </body>
 </html>
