created mobile css and dynamically added habitats through js

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -23,15 +23,15 @@
     </header>
     <main>
         <h1 class="title">Exploring the African Safari</h1>
-        <img id="hero" src="images/hero2.webp" alt="african plains">
+        <img id="hero" src="images/hero2.webp" alt="african plains" loading="lazy">
         <div class="content">
             <div class="section">
-                <img src="images/giraffe.jpg" alt="giraffe">
+                <img src="images/giraffe.jpg" alt="giraffe" loading="lazy">
                 <h2>Discover the African Safari</h2>
                 <p>Experience the breathtaking landscapes and diverse wildlife of Africa. From the majestic lions to the graceful giraffes, every moment is a chance to connect with nature.</p>
             </div>
             <div class="section">
-                <img src="images/safari-car.jpg" alt="safari guide">
+                <img src="images/safari-car.jpg" alt="safari guide" loading="lazy">
                 <h2>Why Choose an African Safari?</h2>
                 <p>An African safari offers an unparalleled adventure, immersing you in unique ecosystems. Witness the Great Migration, explore the Serengeti, and create memories that last a lifetime.</p>
             </div>
