--- a/final-project/travel.html
+++ b/final-project/travel.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="travel-color">
             <a href="index.html">Home</a>
             <a href="habitats.html">Habitats</a>
             <a href="travel.html">Travel</a>
@@ -24,31 +24,32 @@
     </header>
     <main>
         <h1 class="title">Travel</h1>
-        <img id="hero" src="images/johannesburg.jpg" alt="johannesburg city">
+        <img id="hero" src="images/johannesburg.jpg" alt="johannesburg city" loading="lazy">
 
         <div class="travel-content">
             <h2>Travel Tips</h2>
             <p>Fly into major hubs like Nairobi or Johannesburg and connect to regional airports near safari destinations. Many safaris include guided transportation.</p>
-            <img src="images/africa.jpg" alt="african map">
+            <img src="images/africa.jpg" alt="african map" loading="lazy">
         </div>
 
-        <h2>Accommodation Options</h2>
+        
+        <h2 id="accommodation-title">Accommodation Options:</h2>
         <div class="content travel">
-            <div class="section">
-                <img src="images/luxury.jpeg"  alt="luxury lodge">
+            <div class="section accomodation">
+                <img class="accommodation-img" src="images/luxury2.jpg"  alt="luxury lodge" loading="lazy">
                 <h3>Luxury Lodges: Experience comfort and elegance with stunning views.</h3>
             </div>
             <div class="section">
-                <img src="images/camp2.jpeg" alt="camp">
+                <img class="accommodation-img" src="images/camp3.jpg" alt="camp" loading="lazy">
                 <h3>Safari Camps: Get closer to nature in eco-friendly camps.</h3>
             </div>
             <div class="section">
-                <img src="images/budget.jpg" alt="budget Accommodation">
+                <img class="accommodation-img" src="images/budget.jpg" alt="budget Accommodation" loading="lazy">
                 <h3>Budget-Friendly: Enjoy affordable options without compromising on adventure.</h3>
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="travel-color">
         <p>&copy; 2024 Exploring the African Safari. All rights reserved. - Cody Dzierzon</p>
     </footer>
 </body>
