Added more detailed titles

--- a/final-project/travel.html
+++ b/final-project/travel.html
@@ -23,7 +23,7 @@
 
     </header>
     <main>
-        <h1 class="title">Travel</h1>
+        <h1 class="title">Travel Tips</h1>
         <img id="hero" src="images/johannesburg.jpg" alt="johannesburg city" loading="lazy">
 
         <div class="travel-content">
