--- a/final-project/habitats.html
+++ b/final-project/habitats.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <h1 class="title">Habitats</h1>
+        <h1 class="title">African Habitats</h1>
         <img id="hero" src="images/green-hero.jpg" alt="african jungle" loading="lazy">
     
 
